stylesheets/default.css
/* ... */
#homepage table tr {
    height: 120px;
    vertical-align: bottom;
}

#homepage table td {
    padding: 3px;
}

#homepage table td.icon {
    width: 120px;
}

#homepage table td img {
    width: 96px;
    height: 96px;
}

#homepage table td.text {
    vertical-align: top;
    text-align: left;
    width: 50%;
}

#homepage .cell {
    position:relative;
    top: 25px;
}

#homepage table a:link {
    font-size: 20px;
    font-weight: bold;
    color: #000;
}

#homepage table a:visited {
    font-size: 20px;
    font-weight: bold;
    color: #000;
}

#cmle-snr {
    text-align: left;
}

#qmle-snr {
    text-align: left;
}

td {
    text-align: center;
}

td.name {
    text-align: left;
}

td.group {
    text-align: center;
}

td.email {
    width: 50%;
    text-align: right;
}

td.date {
    text-align: left;
}

td.operations {
    text-align: right;
}

td.operations input {
    font-size: 70%;
}

tr.disabled {
    background: silver;
}

a.selected {
    color: black;
    text-decoration: none;
    border: solid 1px;
}

a.empty {
    color: rgb(194, 26, 26);
    text-decoration: none;
    border: solid 1px white;
    font-size: 9px;
}

a.filled {
    color: blue;
    text-decoration: none;
    border: solid 1px white;
    font-size: 9px;
}

#box #adduser {
    padding-right: 5em;
}

#adduser {
    text-align: right;
    padding-right: 3em;
}

#adduser textarea {
    width: 50%;
}

span.spacer {
    display: block;
    clear: both;
}

fieldset {
    margin: 5px;
    margin-top: 15px;
    padding: 10px 5px 10px 5px;
}

fieldset legend {
    font-size: 1.0em;
    font-weight: bold;
}

fieldset.report {
    margin-top:10px;
    margin-bottom:10px;
}

fieldset.p {
    
}


ol li {
    display: inline;
}

input.icon {
    width: 60px;
    height: 60px;
    color: #fff;
    font-size: 0px;
    text-align: left;
    cursor: pointer;
    border: none;
}

input.empty {
    width: 60px;
    height: 60px;
    cursor: default;
    background: url(../images/empty.png);
}

input.previous {
    width: 60px;
    height: 60px;
    background: url(../images/previous.png) no-repeat right;
}

input.next {
    width: 60px;
    height: 60px;
    background: url(../images/next.png) no-repeat right;
}

input.up {
    width: 60px;
    height: 60px;
    background: url(../images/up.png) no-repeat right;
}

input.calc {
    width: 60px;
    height: 60px;
    background: url(../images/calc.png) no-repeat right;
}

input.ok {
    width: 60px;
    height: 60px;
    background: url(../images/ok.png) no-repeat center;
}

input.cancel {
    width: 60px;
    height: 60px;
    background: url(../images/cancel.png) no-repeat center;
}

input.apply {
    width: 60px;
    height: 60px;
    background: url(../images/apply.png) no-repeat center;
}

input.back {
    width: 60px;
    height: 60px;
    background: url(../images/back.png) no-repeat center;
}

input.restart {
    width: 60px;
    height: 60px;
    background: url(../images/restart.png) no-repeat center;
}

input.noPreview {
    width: 200px;
    height: 200px;
    background: url(../images/no_preview.jpg) no-repeat center;
}


span.multichannel {
    margin-left: -8px;
}

div.multichannel {
    padding-top: 5px;
    text-align: center;
}

.nowrap {
    white-space: nowrap;
}

.multichannelinput {
    text-align: right;
}

option.default {
    color: #078d1b;
}

.line {
    display: block;
}

.textfield {
    width: 50%;
    text-align: left;
    vertical-align: middle;
    margin-right: 5px;
}

.psffile {
    width: 70%;
}

.psfmissing {
    width: 70%;
    color: red;
}

.button {
    width: 25%;
    text-align: center;
    margin: 5px 15px 5px 0px;
}

.submit {
    width: 30%;
}

.message {
    font-size: 10px;
    font-weight: bold;
    margin: 0px;
    padding: 0px;
}

.warning {
    font-weight: bold;
    color: red;
}

.notice {
    text-align: center;
}

.info {
    color: red;
}

.dbOutDated {
    background-color: #FF0000;
    color: white;
    font-size: 120%;
}

.title {
    font-weight: bold;
}

.menu {
    font-size: 80%;
    text-align: center;
}

.normal {

}

.footnote {
    font-size: 70%;
}

.disabled {
    background: gray;
}

